# insta_cli

./: .gitignore  README.md
claptest/: Cargo.toml
cli/: Cargo.toml
cli/src/: client.rs  colors.rs  completer.rs  crypto.rs  main.rs  models.rs  spinner.rs
cli/src/commands/: auth.rs  inbox.rs  mod.rs  send.rs
mini-projects/claptest/: README.md
mini-projects/claptest/src/: main.rs
mini-projects/grep-file/: Cargo.toml  README.md
mini-projects/grep-file/src/: main.rs
mini-projects/rustflix/: README.md
mini-projects/rustflix/migrations/2026-01-17-013137-0000_videos/: down.sql  up.sql
mini-projects/rustflix/src/: args.rs
rustflix/: Cargo.toml  README.md
rustflix/src/: main.rs  models.rs
rustflix/src/ops/: user_ops.rs  video_ops.rs  view_ops.rs
server/: README.md  crypto.py  main.py  pyproject.toml
server/instagram/: __init__.py  auth.py  client.py  messages.py  parsers.py  session.py
server/middleware/: __init__.py
server/models/: __init__.py  api_models.py  message_models.py  user_models.py
testing/src/: lib.rs  main.rs
