[package]
name = "rustflix"
version = "0.1.0"
edition = "2024"
authors = ["Aung Nanda Oo aungtest@example.com>"]
description = "A simple CLI tool for Rustflix"

[dependencies]
diesel = {
    version = "2.3.5",
    features = ["postgres","chrono"]
}
clap = { version = "4.5.54", features = ["derive"] }
chrono = "^0"
dotenv = "0.15.0"
